--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: Shiba Inu # the website title (if blank, full name will be used instead)
+title: Doudou # the website title (if blank, full name will be used instead)
 first_name: 
 middle_name: 
 last_name: 
