--- a/_config.yml
+++ b/_config.yml
@@ -198,8 +198,8 @@ jekyll-archives:
 
 scholar:
 
-  last_name: Einstein
-  first_name: [Albert, A.]
+  last_name: Shiba Inu
+  first_name: [Doudou]
 
   style: apa
   locale: en
