--- a/_config.yml
+++ b/_config.yml
@@ -2,11 +2,11 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: Doudou # the website title (if blank, full name will be used instead)
-first_name: 
+title: Hong-Wei Zhang # the website title (if blank, full name will be used instead)
+first_name: Hong-Wei
 middle_name: 
-last_name: 
-email: Shiba.Inu@example.com
+last_name: Zhang
+email: email@example.com
 description: 
 footer_text: 
 keywords:   # add your own keywords or leave empty
@@ -55,7 +55,7 @@ github_username: # your GitHub user name
 gitlab_username: # your GitLab user name
 twitter_username: # your Twitter handle
 linkedin_username: # your LinkedIn user name
-scholar_userid: # your Google Scholar ID
+scholar_userid: 5ZPwfYcAAAAJ
 orcid_id: # your ORCID ID
 medium_username: # your Medium username
 quora_username: # your Quora username
