--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # -----------------------------------------------------------------------------
 
 title: Hong-Wei Zhang # the website title (if blank, full name will be used instead)
-first_name: Hong-Wei
+first_name: 
 middle_name: 
-last_name: Zhang
+last_name: 
 email: email@example.com
 description: 
 footer_text: 
