--- a/_config.yml
+++ b/_config.yml
@@ -283,3 +283,7 @@ popper:
 medium_zoom:
   version: "1.0.6"
   integrity: "sha256-EdPgYcPk/IIrw7FYeuJQexva49pVRZNmt3LculEr7zM="
+
+  
+html-proofer:
+disable_external: true
