--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -46,3 +46,5 @@ jobs:
         with:
           event-type: prettier-failed-on-pr
           client-payload: '{"pr_number": "${{ github.event.number }}", "artifact_url": "${{ steps.artifact-upload.outputs.artifact-url }}", "run_id": "${{ github.run_id }}"}'
+
+continue-on-error: true
