--- a/_config.yml
+++ b/_config.yml
@@ -123,7 +123,20 @@ keep_files:
   - .nojekyll
   - .git
 
-
+# Plug-ins
+plugins:
+  - jekyll-archives
+  - jekyll-diagrams
+  - jekyll-email-protect
+  - jekyll-feed
+  - jekyll-imagemagick
+  - jekyll-minifier
+  - jekyll-paginate-v2
+  - jekyll/scholar
+  - jekyll-sitemap
+  - jekyll-target-blank
+  - jekyll-twitter-plugin
+  - jemoji
 
 # Sitemap settings
 defaults:
