--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -90,6 +90,14 @@ jobs:
           pip3 install --upgrade nbconvert
           export JEKYLL_ENV=production
           bundle exec jekyll build
+      - name: Install Bundler 🔧
+        run: |
+          gem update --system
+          gem install bundler -v 2.4.22
+          bundle update --bundler
+      - name: Install Dependencies 🔧
+        run: |
+          bundle install --jobs 4 --retry 3 --verbose
       - name: Purge unused CSS 🧹
         run: |
           npm install -g purgecss
