--- a/_config.yml
+++ b/_config.yml
@@ -283,3 +283,6 @@ popper:
 medium_zoom:
   version: "1.0.6"
   integrity: "sha256-EdPgYcPk/IIrw7FYeuJQexva49pVRZNmt3LculEr7zM="
+
+third_party_libraries:
+  example_lib: "https://example.com/library.js"
