--- a/_config.yml
+++ b/_config.yml
@@ -288,3 +288,7 @@ third_party_libraries:
   library1:
     url:
       main: "https://example.com/lib1.js"
+
+exclude:
+  - _pages/projects.md
+  - assets/jupyter/
