--- a/_config.yml
+++ b/_config.yml
@@ -285,3 +285,8 @@ popper:
 medium_zoom:
   version: "1.0.6"
   integrity: "sha256-EdPgYcPk/IIrw7FYeuJQexva49pVRZNmt3LculEr7zM="
+
+third_party_libraries:
+  library1:
+    url:
+      main: "https://example.com/lib1.js"
