--- a/_config.yml
+++ b/_config.yml
@@ -2,16 +2,16 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: blank # the website title (if blank, full name will be used instead)
-first_name: You
-middle_name: R.
-last_name: Name
+title: Hong-Wei Zhang
+first_name: 
+middle_name: 
+last_name: 
 contact_note: 
 description:
 footer_text: 
 keywords: 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: ⚛️ # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+icon: # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://zhangh-w.github.io/
 baseurl: 
